--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,12 @@
 {
 	"name": "Eclipse",
-	"version_number": "1.0.0",
+	"version_number": "1.0.1",
 	"website_url": "https://github.com/Tizitendo/0n_x-Eclipse",
 	"description": "Adds the cut Eclipse difficulty back into the game",
 	"dependencies": [
-		"ReturnOfModding-ReturnOfModding-1.0.48",
-		"RoRRModdingToolkit-RoRR_Modding_Toolkit-1.1.24"
+		"ReturnOfModding-ReturnOfModding-1.0.56",
+		"RoRRModdingToolkit-RoRR_Modding_Toolkit-1.2.8",
+		"SmoothSpatula-TomlHelper-1.0.1",
+		"Klehrik-CurseHelper-1.0.1"
 	]
 }
